--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "application_id": "YOUR_APPLICATION_ID_HERE",
     "activity_details": "Your Activity Details",
     "activity_state": "Your Activity State",
     "large_image_key": "https://your_large_image_url.png",
